<resources>
    <string name="app_name">Greenhouse</string>
    <string name="spray" translatable="false">Spray</string>
    <string name="inspector">Inspector</string>
    <string name="farm_select">Select the farm you are in now:</string>
    <string name="farm_id_select" translatable="false">Enter farm ID to continue:</string>
    <string name="continue_farm_id" translatable="false">Continue</string>
    <string name="choose_farm">Choose Farm</string>
    <string name="farm_id_not_found" translatable="false">Couldn\'t find a farm with this ID...</string>
    <string name="cant_do_this_now">Can\'t do this right now</string>
    <string name="logout">Logout</string>
    <string name="logout_successful">Successfully logged out</string>
    <string name="greenhouse_id">Greenhouse Id:</string>
    <string name="greenhouse_width">Greenhouse Width:</string>
    <string name="greenhouse_height">Greenhouse Height:</string>
    <string name="select">Select</string>
    <string name="select_greenhouse">Select Greenhouse:</string>
    <string name="no_greenhouse">No Greenhouse</string>
    <string name="bug_add">Add new bug</string>
    <string name="bug_remove_last">Remove last bug</string>
    <string name="greenhouse_bugs">Bugs in greenhouse:</string>
    <string name="start_bugs">How many bugs were when you started</string>
    <string name="added_bugs">How many bugs you added</string>
    <string name="cant_remove_bug">Can\'t remove the last bug because it was added in a previous session</string>
    <string name="save_local">Save locally</string>
    <string name="delete_all_added">Delete all new added</string>
    <string name="greenhouse_select">Greenhouse Select</string>
    <string name="saved_bugs">Successfully saved bugs to the local file</string>
    <string name="deleted_all_added">Successfully deleted all new added bugs</string>
    <string name="upload_to_cloud">Upload to the cloud</string>
    <string name="sync_with_cloud">Sync from the cloud</string>
    <string name="upload">Upload</string>
    <string name="sync">Sync</string>
    <string name="upload_to_cloud_message">This will try to upload all the data you collected to the cloud</string>
    <string name="dont">Don\'t</string>
    <string name="upload_successful">Successfully uploaded the data to the cloud</string>
    <string name="upload_fail">Upload to the cloud failed</string>
    <string name="no_connection">No internet connection, try again later</string>
    <string name="sync_with_cloud_message">This will try to download all the info from the cloud to your device</string>
    <string name="sync_successful">Successfully synced the data from the cloud with your device</string>
    <string name="sync_fail">Failed to sync the data from the cloud with your device</string>
    <string name="local">Local</string>
    <string name="cloud">Cloud</string>
    <string name="local_cloud">Use Cloud or Local</string>
    <string name="local_cloud_message">Download data from the cloud or use local data?</string>
    <string name="upload_to_pi">Upload to controller</string>
</resources>
